--- a/TypeStream.Json/TypeStream.Json.csproj
+++ b/TypeStream.Json/TypeStream.Json.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Buffers" Version="4.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TypeStream\TypeStream.csproj" />
   </ItemGroup>
 
 </Project>
