--- a/src/TypeStream/TypeStream.csproj
+++ b/src/TypeStream/TypeStream.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TypeStream.Abstractions\TypeStream.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
